k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: default
spec:
  ports:
  - nodePort: 30841
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
  type: NodePort
